# DaemonClient

./: .env  .firebaserc  .gitignore  About.md  BUG_FIXES_2026-04-26_19-25.md  CRITICAL_FIXES_DEPLOYED.md  DEPLOYMENT_FINAL_2026-04-26.md  DaemonClient.html  PRIORITY_QUEUE_DEPLOYED.md  PROJECT_ROADMAP.md  README.md  firebase.json  firestore.rules  generate_session.py  main.py  package-lock.json  package.json  requirements.txt  serviceAccountKey.json  txt  wrangler.jsonc.backup
.claude/: settings.json
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache  hosting.cHVibGlj.cache
accounts-portal/: index.html  package-lock.json  package.json  tailwind.config.js
auth-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
backend-server/: admin_bot.py  find_it.py  generate_session.py  keep_alive.py  main.py  requirements.txt  service_account.json
daemon-cli/: README.md  daemon.py  pyproject.toml  requirements.txt
daemon-cli/src/daemonclient/: __init__.py  auth.py  cli.py  config.py  crypto.py  transfer.py
daemonclient-desktop/: index.html  main.js  package-lock.json  package.json
daemonclient-immich-bridge/: package-lock.json  package.json  wrangler.toml
daemonclient-proxy/: package-lock.json  package.json  wrangler.jsonc
daemonclient-site/: index.html  sitemap.xml
deployment-service/: package-lock.json  package.json  tsconfig.json  wrangler.toml
docs/: SETUP_GUIDE.md  v2.0.0-COMPLETION-REPORT.md
drive/: app.html  index.html  package-lock.json  package.json  vite.config.js
e2e-tests/: package.json  setup-test.spec.ts
frontend/: index.html  (+2 more)
(+353 files in other folders)
