[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daemonclient"
version = "1.0.1"
description = "CLI for DaemonClient — unlimited encrypted cloud storage powered by Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "myrosama" },
]
keywords = ["cloud", "storage", "telegram", "encryption", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.scripts]
daemon = "daemonclient.cli:app"

[project.urls]
Homepage = "https://daemonclient.uz"
Repository = "https://github.com/myrosama/DaemonClient"
